5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1834_1277.log
== TEST (2019-06-30 20:27:47) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:27:48) 
-- CODE:
from numpy import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 2
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:28:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = t[i,j]
print(x)
-- ERROR:
File "XXXX", line 3
    t = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:29:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
tab = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = tab[i,j]
print(x)
-- ERROR:
File "XXXX", line 3
    tab = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:30:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
tab = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,0,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = tab[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 20:31:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
tab = array([[0,2,11,6,15,11,1], [2,0,7,12,4,2,15], [11,7,0,11,8,3], [6,12,11,0,10,2,1], [15,4,8,10,0,5,13], [11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])
c1 = int(input("cidade 1: "))
c2 = int(input("cidade 2: "))
i = c1/111 - 1
j = c2/111 - 1

x = tab[i,j]
print(x)
-- EXECUTION TIME:
1.06462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 9, in <module>
    x = tab[i,j]
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
